# datasette-cell-template

./: .gitignore  README.md  pyproject.toml
datasette_cell_template/: __init__.py
datasette_cell_template/templates/: row.html
tests/: test_coverage.py  test_plugin.py  test_reproduce.py
